prevent cocktail name and ingredients from wrod wrapping on index page

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -50,6 +50,7 @@
   width: 0;
   height: 100%;
   transition: all 1s ease;
+  white-space: nowrap;
   li {
     font-size: 16px;
   }
